Digital page improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -671,6 +671,7 @@ a:hover {
     .mdc-card__supporting-text {
         padding-bottom: $spacing-unit;
     }
+    a,
     li a,
     .post-info,
     .mdc-card__actions a,
