--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -25,7 +25,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
-                    &nbsp;
+                    {{> library_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
                     {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
