--- a/functions/test-db/json2/scvo/templates/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/event-booking.hbs
@@ -20,9 +20,8 @@
     <div class="container-fluid">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/services/events">Events</a></li>
-            <li><a href="/services/events/{{slug}}">{{{title}}}</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/events/{{slug}}">{{{title}}}</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
