--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -19,8 +19,7 @@
     <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/services/events">Events</a></li>
+            <li><a href="/events">Events</a></li>
         </ul>
         <div class="mdc-layout-grid">
             {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
