--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,5 +1,5 @@
 <div class="splash-image hello" style="{{> header_splash_image}}">
-    <div class="splash-overlay" style="{{> header_splash_overlay}}">
+    <div class="splash-overlay">
         <div class="container-fluid">
             <div class="mdc-layout-grid">
                 <h1 class="header-text">
