--- a/functions/test-db/json2/scvo/templates/digital.hbs
+++ b/functions/test-db/json2/scvo/templates/digital.hbs
@@ -1,5 +1,5 @@
 <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
-    <div class="splash-overlay" style="{{> header_splash_overlay}}">
+    <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
         <div class="container-fluid">
             <div class="mdc-layout-grid">
                 {{#if primaryResponse.hits.hits.[0]._source.header_text}}
