Basic outline content for human rights declaration

--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -1,2 +1,27 @@
 @import url("//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css");
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,500,700,800");
+
+$spacing-unit: 1rem;
+
+html {
+    overflow-y: scroll;
+    height: 100%;
+    font-size: 0.96rem;
+    line-height: 1.45;
+}
+body {
+    min-height: 100%;
+    padding: 0;
+    margin: 0;
+}
+main {
+    background-color: white;
+}
+.container-fluid {
+    max-width: 1280px;
+    width: 95%;
+    margin: 0 auto;
+    overflow: auto;
+    overflow: -webkit-paged-x;
+    padding: $spacing-unit/2;
+}
