--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1367,7 +1367,16 @@ p:last-child {
         vertical-align: bottom;
         font-weight: 400;
     }
-    a[href^="https://members.scvocreditunion"]::after {
+    a[href^="http://goodhq.org"]::after,
+    a[href^="https://goodhq.org"]::after,
+    a[href^="http://thirdforcenews.org.uk"]::after,
+    a[href^="https://thirdforcenews.org.uk"]::after,
+    a[href^="https://scvocreditunion"]::after,
+    a[href^="https://members.scvocreditunion"]::after,
+    a[href^="http://goodmoves"]::after,
+    a[href^="https://goodmoves"]::after,
+    a[href^="http://fundingscotland"]::after,
+    a[href^="https://fundingscotland"]::after {
         content: " ";
     }
 }
