--- a/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Scotland Declaration on Human Rights</title>
+    <title>The Scotland Declaration on Human Rights</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
@@ -39,36 +39,30 @@
                 <div class="mdc-toolbar__row">
                     <div class="container-fluid">
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                            <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
-                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
-                            </button>
                             <span class="mdc-toolbar__title catalog-title">
-                                <a href="/" class="brand-logo" title="SCVO">
-                                    <img src="assets/images/scvo-logo.png" />
+                                <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
+                                    <img src="assets/images/declaration-logo.png" />
                                 </a>
                             </span>
                         </section>
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
-                            <nav id="upper-tab-bar" class="mdc-tab-bar">
-                                <a class="mdc-tab" href="/signin">Sign in</a>
-                                <a class="mdc-tab" href="/signup">Sign up</a>
-                                <a class="mdc-tab" href="/about">About</a>
+                        <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+                            <nav id="main-tab-bar" class="mdc-tab-bar">
+                                <a class="mdc-tab" href="/">Home</a>
+                                <a class="mdc-tab" href="/the-declaration">The Declaration</a>
+                                <a class="mdc-tab" href="/why-sign">Why sign?</a>
+                                <a class="mdc-tab" href="/sign-up">Sign up</a>
+                                <a class="mdc-tab" href="/signatories">Signatories</a>
                             </nav>
-                            <form [searchroute]="'search'" class="mdc-form-field mdc-form-field--align-end">
-                                <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
-                                    <input type="text" class="mdc-textfield__input white-text searchRoute" placeholder="Search" id="q" name="q">
-                                </div>
-                                <button type="submit" class="mdc-toolbar__icon" aria-label="Search" alt="Search">
-                                    <span class="fa fa-search" aria-hidden="true"></span>
-                                </button>
-                            </form>
+                            <!-- <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
+                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                            </button> -->
                         </section>
                     </div>
                 </div>
             </header>
 
             <main class="mdc-toolbar-fixed-adjust">
-                <div class="page-content">
+                <div class="container-fluid">
                     <router-outlet>{{{route.rendered}}}</router-outlet>
                 </div>
             </main>
@@ -77,43 +71,11 @@
                 <div class="footer">
                     <div class="container-fluid">
                         <div class="footer-main">
-                            <div class="mdc-layout-grid">
-                                <div class="mdc-layout-grid__inner">
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet">
-                                        <a href="/" class="brand-logo" title="SCVO">
-                                            <img src="assets/images/scvo-logo.png" />
-                                        </a>
-                                        <p>Scotland Declaration on Human Rights</p>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
-                                        &nbsp;
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            <li class="mdc-list-item"><a href=""></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            <li class="mdc-list-item">
-                                                <a href="mailto:enquiries@scvo.org.uk">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="tel:+441314748000">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://www.facebook.com/SCVO1939">
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://twitter.com/scvotweet">
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="footer-brand">
+                                <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
+                                    <img src="assets/images/declaration-logo.png" />
+                                </a>
+                                <p>Scotland Declaration on Human Rights</p>
                             </div>
                             <div class="footer-copyright">
                                 <div class="row">
