--- a/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/home.hbs
@@ -1,9 +1,9 @@
-The Universal Declaration of Human Rights is 70 years old this year and states:
+<p>The Universal Declaration of Human Rights is 70 years old this year and states:</p>
 
-“All human beings are born free and equal in dignity and rights”
+<p class="quote"><em>“All human beings are born free and equal in dignity and rights”</em></p>
 
-We want equality and human rights to be at the heart of Scottish society.  Whatever the Brexit outcome, we want to protect our rights.  We want Scotland to be a world leader in rights protection and implementation.
+<p>We want equality and human rights to be at the heart of Scottish society.  Whatever the Brexit outcome, we want to protect our rights.  We want Scotland to be a world leader in rights protection and implementation.</p>
 
-Agree? Then please sign up to support the Scotland Declaration on Human Rights.
+<p>Agree? Then please sign up to support the Scotland Declaration on Human Rights.</p>
 
-You can help send a clear message to policy makers, the public and the world that Scotland is actively committed to equality and human rights.
+<p>You can help send a clear message to policy makers, the public and the world that Scotland is actively committed to equality and human rights.</p>
