--- a/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
@@ -35,13 +35,13 @@
 <body class="{{replace route.params.path '_' ' '}}">
     <scvo-site>
         <div class="mdc-typography">
-            <header class="mdc-toolbar mdc-toolbar--fixed">
+            <header class="mdc-toolbar">
                 <div class="mdc-toolbar__row">
                     <div class="container-fluid">
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
-                                    <img src="assets/images/declaration-logo.png" />
+                                    <img src="https://storage.cloud.google.com/humanrightsdeclaration/SDHR-logo-RGB-TALL-LARGE.PNG" />
                                 </a>
                             </span>
                         </section>
@@ -61,7 +61,7 @@
                 </div>
             </header>
 
-            <main class="mdc-toolbar-fixed-adjust">
+            <main>
                 <div class="container-fluid">
                     <router-outlet>{{{route.rendered}}}</router-outlet>
                 </div>
@@ -72,10 +72,10 @@
                     <div class="container-fluid">
                         <div class="footer-main">
                             <div class="footer-brand">
-                                <a href="/" class="brand-logo" title="The Scotland Declaration on Human Rights">
-                                    <img src="assets/images/declaration-logo.png" />
+                                <a href="http://scvo.org" class="brand-logo" title="The Scotland Declaration on Human Rights">
+                                    <img src="assets/images/scvo-logo.png" />
                                 </a>
-                                <p>Scotland Declaration on Human Rights</p>
+                                <p>The Scotland Declaration on Human Rights is supported by the Scottish Council for Voluntary Organisations</p>
                             </div>
                             <div class="footer-copyright">
                                 <div class="row">
