--- a/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
@@ -27,10 +27,10 @@
     </button>
 </form>
 
-<div class="mdc-layout-grid">
+<div class="mdc-layout-grid signatories">
     <div class="mdc-layout-grid__inner">
         {{#each primaryResponse.hits.hits}}
-        <div class="mdc-layout-grid__cell--span-3">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
             {{{_source.rendered.search_result_logo}}}
         </div>
         {{/each}}
