--- a/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
@@ -4,5 +4,6 @@
     {{#each breadcrumb}}
     <li><a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a></li>
     {{/each}}
+    <li>{{title}}</li>
 </ul>
 {{/with}}
