--- a/functions/test-db/json2/scvo/templates/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/event-booking.hbs
@@ -22,6 +22,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/events/{{slug}}">{{{title}}}</a></li>
+            <li>Booking</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
