--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -19,6 +19,7 @@
     <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
+            <li>Events</li>
         </ul>
         <div class="mdc-card">
             <section class="mdc-card__primary">
