--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -20,6 +20,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/events">Events</a></li>
+            <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
             {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
