--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -20,6 +20,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
+            <li>Evidence Library</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
