--- a/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
@@ -20,6 +20,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
             <li><a href="/digital/cyber-resilience">Cyber Resilience</a></li>
+            <li>{{{supplimentaryResponses.page.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
