--- a/functions/test-db/json2/scvo/templates/members.hbs
+++ b/functions/test-db/json2/scvo/templates/members.hbs
@@ -8,7 +8,7 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            SCVO member organisations
+                            Our members
                         </span>
                     </h1>
                     {{/if}}
@@ -20,6 +20,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About SCVO</a></li>
+            <li>Our members</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid">
