--- a/functions/test-db/json2/humanrightsdeclaration/templates/declaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/declaration.hbs
@@ -1,27 +1,27 @@
 <h1>The Scotland Declaration on Human Rights</h1>
 
-The Universal Declaration of Human Rights - which celebrates its 70th anniversary this year - states:
+<p>The Universal Declaration of Human Rights - which celebrates its 70th anniversary this year - states:</p>
 
-“All human beings are born free and equal in dignity and rights”
+<p class="quote"><em>“All human beings are born free and equal in dignity and rights”</em></p>
 
-Human rights belong to everyone; rich or poor, old or young, whether born in this country or another. We all have rights regardless of sex, race, disability, sexual orientation, religion, age, gender or belief.  We together declare that human rights and equalities must remain at the heart of Scottish society.
+<p>Human rights belong to everyone; rich or poor, old or young, whether born in this country or another. We all have rights regardless of sex, race, disability, sexual orientation, religion, age, gender or belief.  We together declare that human rights and equalities must remain at the heart of Scottish society.</p>
 
-We, the undersigned, share grave concerns about the potential loss of equality and rights protections as a consequence of the UK leaving the European Union and about the pervasive negative rhetoric around the protection and promotion of rights in the UK.
+<p>We, the undersigned, share grave concerns about the potential loss of equality and rights protections as a consequence of the UK leaving the European Union and about the pervasive negative rhetoric around the protection and promotion of rights in the UK.</p>
 
-We want Scotland to be a leader and not a laggard in human rights terms.
+<p>We want Scotland to be a leader and not a laggard in human rights terms.</p>
 
-We therefore call on policy makers to take all possible steps to protect our rights and to make Scotland a world leader in both rights protection and implementation.
+<p>We therefore call on policy makers to take all possible steps to protect our rights and to make Scotland a world leader in both rights protection and implementation.</p>
 
-We believe that the following principles must apply in all decisions that affect human rights:
+<p>We believe that the following principles must apply in all decisions that affect human rights:</p>
 
 <h3>No going back</h3>
-Human rights and equalities protections in law, policy and practice must not be reduced or regressed for any individual, group, community or sector of the population.
+<p>Human rights and equalities protections in law, policy and practice must not be reduced or regressed for any individual, group, community or sector of the population.</p>
 
 <h3>Progression</h3>
-Human rights standards should be continually strengthened over time.  Scotland must help to shape and adopt the highest international human rights and equalities standards.
+<p>Human rights standards should be continually strengthened over time.  Scotland must help to shape and adopt the highest international human rights and equalities standards.</p>
 
 <h3>Transparency</h3>
-Any changes to existing rights protections should be undertaken only with a fully transparent consultation process and the appropriate degree of parliamentary scrutiny at all levels.
+<p>Any changes to existing rights protections should be undertaken only with a fully transparent consultation process and the appropriate degree of parliamentary scrutiny at all levels.</p>
 
 <h3>Participation</h3>
-The people of Scotland must be engaged in a process of understanding what their rights are, how they are protected and what more can be done to protect their rights.  Any significant change in the protection of rights must be based on this meaningful engagement.
+<p>The people of Scotland must be engaged in a process of understanding what their rights are, how they are protected and what more can be done to protect their rights.  Any significant change in the protection of rights must be based on this meaningful engagement.</p>
