--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -21,6 +21,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
             <li><a href="/policy-research/evidence-library">Evidence library</a></li>
+            <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
