--- a/functions/test-db/json2/scvo/templates/grant-charter.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter.hbs
@@ -22,6 +22,7 @@
             <li><a href="/digital">Digital</a></li>
             <li><a href="/digital/charter-fund">Charter fund</a></li>
             <li><a href="/digital/charter-fund/projects">Projects</a></li>
+            <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
